# udp-ring-queue

./: Cargo.toml  README.md
receiver/: Cargo.toml
receiver/src/: logger.rs  main.rs  pipeline.rs  workers.rs
sender/: .nvim_session  Cargo.toml
sender/src/: main.rs  udp_ingestor.rs  udp_sender.rs
shared/: Cargo.toml
shared/src/: lib.rs  types.rs
