[package]
name = "receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
shared = { path = "../shared" }
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
simd-json = { version = "0.17.0", features = ["serde"] }
socket2 = { version = "0.6.4", features = ["all"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros","sync", "time", "io-util"] }
parking_lot = "0.12.4"
anyhow = "1.0.102"

[dev-dependencies]
async-trait = "0.1.89"

[build]
target = "x86_64-unknown-linux-gnu"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true


